--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -225,10 +225,12 @@
 
             .tv__right_side {
                 width: 20%;
-                // height: 100%;
+                height: 100%;
                 margin-top: 20px;
+                padding-bottom: 20px;
                 img{
-                    height: auto;
+                    height: 100%;
+                    object-fit: cover;
                 }
             }
         }
