--- a/src/components/shoppingList/shoppingList.scss
+++ b/src/components/shoppingList/shoppingList.scss
@@ -175,11 +175,14 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
+      padding-top: 10px;
     }
 
-    button {
+    .button{
       line-height: 50px;
       width: 100%;
+      display: inline-block;
+      color: #555555;
       text-align: center;
       font-size: 14px;
       font-weight: 600;
