--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -279,4 +279,10 @@
             }
         }
     }
+
+    @media screen and (max-width: 1200px) {
+        .cart__info{
+            flex-direction: column;
+        }
+    }
 }
