--- a/src/components/wishlist/wishlist.scss
+++ b/src/components/wishlist/wishlist.scss
@@ -1,16 +1,68 @@
-
-.wishlist{
-
-    .wishlist__empty{
+#wishlist {
+    .wishlist__empty {
         display: flex;
         flex-direction: column;
         align-items: center;
         position: relative;
         top: 100px;
 
-        .tbHeart{
+        .tbHeart {
             font-size: 100px;
             color: #666;
+        }
+    }
+
+    .wish-products-list {
+        height: auto;
+        .products-card {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+
+            .card-img {
+                width: 70px;
+                height: 70px;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
+                }
+            }
+
+            .pro-title-price {
+                display: flex;
+                flex-direction: column;
+
+                .title {
+                    color: #0068c9;
+                }
+            }
+            .remove-item {
+                .bix {
+                    font-size: 22px;
+                    cursor: pointer;
+                    &:hover {
+                        color: #0068c9;
+                    }
+                }
+            }
+        }
+
+        .go-favorite{
+            width: 90%;
+            margin: 0 auto;
+
+            a{
+                display: block;
+                text-align: center;
+                color: black;
+                width: 100%;
+                margin-top: 20px;
+                line-height: 45px;
+                height: 45px;
+                background-color: #fcbe00;
+            }
         }
     }
 }
